--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "secp256k1-math"
 version = "0.1.0"
 edition = "2021"
+#links = "secp256k1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,3 +15,7 @@ cc = "1.0.28"
 
 [dev-dependencies]
 libc = "0.2"
+
+#[lib]
+#path = "src/lib.rs"    # The source file of the target.
+#crate-type = ["lib"]   # The crate types to generate.
