--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 name = "secp256k1-math"
 version = "0.1.0"
 edition = "2021"
-#links = "secp256k1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rand_core = "0.6"
+sha3 = "0.10.5"
+hex = "0.4.3"
 
 [build-dependencies]
 bindgen = "0.53.1"
@@ -23,4 +24,3 @@ crate-type = ["lib"]   # The crate types to generate.
 [[bin]]
 name = "main"
 path = "src/main.rs"
-links = "secp256k1"
