--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand_core = "0.6"
-sha3 = "0.10.5"
-hex = "0.4.3"
+rand_core = { version = "0.5", features = ["getrandom"] }
+sha3 = "0.10"
+hex = "0.4"
 
 [build-dependencies]
 bindgen = "0.53.1"
