refactor: Add derive attributes to generated types in build.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,13 @@ sha3 = "0.10"
 bindgen = "0.53.1"
 cc = "1.0.28"
 
+# For serde derives
+itertools = "0.10.5"
+proc-macro2 = "1.0.4"
+quote = "1.0.21"
+rustfmt-wrapper = "0.2.0"
+syn = { version = "1.0.105", features = ["full"] }
+
 [dev-dependencies]
 libc = "0.2"
 
