--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: Mushus/checkout-submodule@v1.0.1
+        with:
+          submodulePath: secp256k1
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -40,12 +43,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: Mushus/checkout-submodule@v1.0.1
+        with:
+          submodulePath: secp256k1
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
       - run: rustup component add rustfmt
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
       - uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -56,12 +65,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: Mushus/checkout-submodule@v1.0.1
+        with:
+          submodulePath: secp256k1
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
       - run: rustup component add clippy
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
