--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 repository = "https://github.com/Trust-Machines/p256k1/"
 homepage = "https://p256k1.pages.dev/"
 documentation = "https://p256k1.pages.dev/p256k1/"
+keywords = ["cryptography", "crypto", "secp256k1"]
+categories = ["api-bindings", "cryptography", "mathematics"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
