--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Cargo.lock
+          path: Cargo.lock
 
   fmt:
     name: fmt
