--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ base58 = "0.2"
 bitvec = "1.0.1"
 hex = "0.4"
 num-traits = "0.2"
+primitive-types = "0.12"
 rand_core = { version = "0.6", features = ["getrandom"] }
 serde = { version = "1.0", features = ["derive"] }
 sha3 = "0.10"
