--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,9 @@ serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 
 [build-dependencies]
-bindgen = "0.53.1"
-cc = "1.0.28"
+bindgen = "0.64.0"
+cc = "1.0.79"
+regex = "1.7.1"
 
 # For serde derives
 itertools = "0.10.5"
@@ -35,7 +36,7 @@ syn = { version = "1.0.105", features = ["full"] }
 
 [dev-dependencies]
 libc = "0.2"
-criterion = "0.3"
+criterion = "0.4.0"
 
 [[bench]]
 name = "point_bench"
