--- a/p256k1/Cargo.toml
+++ b/p256k1/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Joey Yandle <xoloki@gmail.com>"]
 license = "Apache-2.0"
 description = "Rust wrappers around libsecp256k1 which expose internal scalar and point APIs"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/Trust-Machines/p256k1/"
 keywords = ["cryptography", "crypto", "secp256k1"]
 categories = ["api-bindings", "cryptography", "mathematics"]
