--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,3 +73,16 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings -A clippy::op-ref -A clippy::needless-range-loop -A clippy::suspicious-arithmetic-impl -A clippy::suspicious-op-assign-impl
+
+  package:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: publish --dry-run
