dry-run on p256k1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,4 +85,4 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          command: publish --dry-run
+          command: publish --dry-run -p p256k1
