--- a/p256k1/Cargo.toml
+++ b/p256k1/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["api-bindings", "cryptography", "mathematics"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = []
+default = ["with_bindgen"]
 with_bindgen = ["dep:bindgen"]
 
 [dependencies]
