--- a/p256k1/Cargo.toml
+++ b/p256k1/Cargo.toml
@@ -12,6 +12,10 @@ categories = ["api-bindings", "cryptography", "mathematics"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["with_bindgen"]
+with_bindgen = ["dep:bindgen"]
+
 [dependencies]
 bitvec = "1.0.1"
 bs58 = "0.4"
@@ -23,8 +27,8 @@ serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 
 [build-dependencies]
-bindgen = "0.64.0"
 cc = "1.0.79"
+bindgen = { version = "0.64.0", optional = true }
 
 # For serde derives
 itertools = "0.10.5"
