--- a/p256k1/Cargo.toml
+++ b/p256k1/Cargo.toml
@@ -40,6 +40,7 @@ syn = { version = "2.0.10", features = ["full"] }
 [dev-dependencies]
 libc = "0.2"
 criterion = "0.4.0"
+serde_json = "1.0"
 
 [[bench]]
 name = "point_bench"
