wrap secp256k1_preallocated.h (#87)
* try to fix symbol clashing errors with libbitcoinconsensus by wrapping secp256k1_preallocated.h

* update upload-artifact action to v4

* update cached wrappers for new header

* inc semver rev for release

* use commit hash not version number for actions/upload-artifact

* update codecov-action to try to fix uploads

* don't fail CI if codecov fails

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 #v4.6.0
         with:
           name: Cargo.lock
           path: Cargo.lock
@@ -50,7 +50,7 @@ jobs:
       - run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml --avoid-cfg-tarpaulin
       - uses: codecov/codecov-action@v3
         with:
-          fail_ci_if_error: true
+          fail_ci_if_error: false
 
   fmt:
     name: fmt
